--- a/package.json
+++ b/package.json
@@ -10,31 +10,31 @@
     "db:test": "node scripts/test-db.js"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.2",
-    "@mui/material": "^5.15.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
-    "zustand": "^4.4.0",
-    "jsonwebtoken": "^9.0.0",
+    "@mui/material": "^5.15.0",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.6.0",
-    "nodemailer": "^6.9.0"
+    "next": "15.5.2",
+    "nodemailer": "^6.9.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.0",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3",
-    "@types/jsonwebtoken": "^9.0.0",
-    "@types/bcryptjs": "^2.4.0",
-    "@types/nodemailer": "^6.4.0"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
