--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "bcryptjs": "^2.4.3",
+    "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.6.0",
     "next": "15.5.2",
     "nodemailer": "^6.9.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
